added auto fetch owner id while creating community

--- a/templates/my_communities.html
+++ b/templates/my_communities.html
@@ -145,7 +145,7 @@
                     Sport: {{ community.sport }}<br>
                     Members: {{ community.members_count }}<br>
                     Turf: {{ community.turf_name }}<br>
-                    <a href="{{ url_for('view_community', community_id=community.id) }}" class="btn">View Details</a>
+                    {# <!-- <a href="{{ url_for('view_community', community_id=community.id) }}" class="btn">View Details</a> --> #}
                 </li>
                 {% endfor %}
             </ul>
