--- a/templates/create_community.html
+++ b/templates/create_community.html
@@ -30,7 +30,7 @@
             <input type="number" id="turf_id" name="turf_id" required>
 
             <label for="owner_id">Owner ID</label>
-            <input type="number" id="owner_id" name="owner_id" required>
+            <input type="number" id="owner_id" name="owner_id" value="{{ owner_id }}" readonly />
 
             <label for="status">Status</label>
             <input type="text" id="status" name="status" value="active">
