--- a/templates/login.html
+++ b/templates/login.html
@@ -16,6 +16,10 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" placeholder="Enter your password" required>
 
+            <label for="is_owner">
+                <input type="checkbox" id="is_owner" name="is_owner"> I am a Turf Owner
+            </label>            
+
             <button type="submit">Login</button>
         </form>
         <p><a href="{{ url_for('register') }}">Don't have an account? Register here.</a></p>
