--- a/templates/join_community.html
+++ b/templates/join_community.html
@@ -281,6 +281,10 @@
         .modal-footer button {
             min-width: 100px;
         }
+
+        .modal-content label {
+            color: #1c1c1c;
+        }
     </style>
 </head>
 <body>
