--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         <div class="container">
 
             <div class="logo">
-                <h1 class="logo-1"><img src="/static/squadUp-logo.png" alt="Squad Up Logo"></h1>
+                <a href="{{ url_for('index') }}"><img src="/static/squadUp-logo.png" alt="Squad Up Logo"></a>
             </div>
             <nav>
                 <ul>
@@ -26,7 +26,7 @@
                     <a href="#">Services ▾</a>
                     <ul class= dropdown>
                         <li><a href="{{ url_for('login') }}">Turf Booking</a></li>
-                        <li><a href="{{ url_for('join_community') }}">Join Community</a>
+                        <li><a href="{{ url_for('login') }}">Join Community</a>
                         </li>
                     </ul>
                     </li>
@@ -56,8 +56,8 @@
                 <p>Be part of the community that celebrates athletes.</p>
             </section>
             <section class="face bottom">
-                <h1>Squad Up!!</h1><br>
-                <p>tagline</p>
+                <h1>Squad Up</h1><br>
+                <p>Game Of Turfs !</p>
             </section>
         </div>
 
