--- a/templates/my_communities.html
+++ b/templates/my_communities.html
@@ -31,6 +31,10 @@
             backdrop-filter: blur(8px);
         }
 
+        .header img {
+            width: 70%;
+        }
+
         .sidebar {
             width: 250px;
             background-color: #2e7d32;
@@ -117,19 +121,28 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo"><img class="squadUp-logo" src="/static/squadUp-logo.png" alt="Squad Up Logo"></div>
+        <a href="{{ url_for('index') }}"><img src="/static/squadUp-logo.png" alt="Squad Up Logo"></a>
+        <div class="search-container">
+            <input type="text" placeholder="Search...">
+        </div>
+        <div class="icons">
+            <button class="icon-button" title="Filters"><i class="fas fa-filter"></i></button>
+            <button class="icon-button" title="Profile"><i class="fas fa-user-circle"></i></button>
+        </div>
     </div>
 
-    <div class="sidebar">
+    <div class="sidebar" id="sidebar">
+        <button class="toggle-button" onclick="toggleSidebar()"><i class="fas fa-bars"></i></button>
         <h2>Sports Portal</h2>
         <a href="{{ url_for('player_dashboard') }}">Dashboard</a>
         <a href="{{ url_for('join_community') }}">Join Community</a>
+        <a href="{{ url_for('select_turf_to_book') }}">Book a Turf</a>
         <a href="{{ url_for('my_communities') }}">My Communities</a>
         <a href="#">History</a>
-        <a href="#">Notifications</a>
+        <a href="{{ url_for('notifications') }}">Notifications</a>
         <a href="#">Messages</a>
         <a href="#">Favourites</a>
-        <a href="#">Help & Support</a>
+        <a href="{{ url_for('help_and_support') }}">Help & Support</a>
         <a href="{{ url_for('logout') }}">Logout</a>
     </div>
 
